--- a/apero-net.opam
+++ b/apero-net.opam
@@ -4,12 +4,12 @@ maintainer:   ["angelo@adlink-labs.tech"]
 authors:      ["Angelo Corsaro"]
 homepage:     "https://github.com/atolab"
 bug-reports:  "https://github.com/atolab/apero-net/issues/"
-dev-repo:     "https://github.com/atolab/apero-net.git"
+dev-repo:     "git://github.com/atolab/apero-net.git"
 
 license: "Apache-2.0"
 
 build: [
-  ["jbuilder" "build" "--only" "apero_net" "--root" "." "-j" jobs "@install"]
+  ["jbuilder" "build" "--only" "apero-net" "--root" "." "-j" jobs "@install"]
 ]
 
 
