fixed apero-core dependcy name in opam file
Signed-off-by: gabrik <gabriele.baldoni@gmail.com>

--- a/apero-net.opam
+++ b/apero-net.opam
@@ -23,7 +23,7 @@ depends: [
   "uuidm" 
   "yojson"
   "lwt_ppx"
-  "apero_core" {>= "0.3.0"}
+  "apero-core" {>= "0.3.0"}
 ]
 
 synopsis : "OCaml Networking Library"
