--- a/lib/dune
+++ b/lib/dune
@@ -2,6 +2,6 @@
   (name            apero_net)
   (public_name     apero-net)  
   (wrapped        false)
-  (libraries    apero-core lwt lwt.unix logs logs.lwt logs.fmt logs.cli fmt fmt.cli fmt.tty cmdliner)
+  (libraries    apero-core lwt lwt.unix websocket websocket-lwt websocket-lwt.cohttp logs logs.lwt logs.fmt logs.cli fmt fmt.cli fmt.tty cmdliner)
   (preprocess (pps ppx_deriving.show ppx_deriving.ord lwt_ppx)))
   
