--- a/apero-net.opam
+++ b/apero-net.opam
@@ -15,18 +15,18 @@ build: [
 
 depends: [
   "ocaml" {>= "4.03.0"}
-  "dune"
-  "cmdliner"
-  "fmt" 
-  "logs" 
-  "lwt" {< "5.0.0"}
-  "ppx_deriving" 
-  "uuidm" 
-  "yojson"
-  "lwt_ppx"
-  "apero-core" {>= "0.4.5"}
-  "websocket" {>= "2.12"}
-  "websocket-lwt" {>= "2.12"}
+  "dune" {= "2.3.0" }
+  "cmdliner" {= "1.0.4" }
+  "fmt"  {= "0.8.8" }
+  "logs"  {= "0.7.0" }
+  "lwt" {= "5.1.1" }
+  "ppx_deriving"  {= "4.4" }
+  "uuidm" {= "0.9.7" }
+  "yojson"  {= "1.7.0" }
+  "lwt_ppx"  {= "2.0.0" }
+  "apero-core" {= "0.4.7"}
+  "websocket" {= "2.12"}
+  "websocket-lwt" {= "2.12"}
 ]
 
 synopsis : "OCaml Networking Library"
